cadastro_aluno.html

--- a/cadastro_aluno.html
+++ b/cadastro_aluno.html
@@ -103,7 +103,7 @@ SEXO: <input type="radio" name="sexo" value="masculino">Masculino
 
 <!-- Espaço reservado para CPF -->
 <label for="cpf">CPF:</label>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;* <input type="text" id="'cpf' name="cpf" placeholder="###.###.###-##" autocomplete="off"> <br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;* <input type="text" id="cpf" name="cpf" placeholder="###.###.###-##" autocomplete="off"> <br>
 (sem espaços, pontos ou traços) <br><br>
 
  <!-- Espaço reservado para endereço -->
